--- a/app/src/main/res/layout/content.xml
+++ b/app/src/main/res/layout/content.xml
@@ -18,6 +18,29 @@
             android:orientation="vertical">
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/imageContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="5dp"
+                android:elevation="6dp"
+                app:cardBackgroundColor="@color/colorAccentLight"
+                app:cardCornerRadius="15dp">
+
+                <ImageView
+                    android:id="@+id/imageContent"
+                    android:layout_width="match_parent"
+                    android:layout_height="190dp"
+                    android:layout_gravity="center"
+                    android:background="@color/blueDark"
+                    android:contentDescription="@string/article_images"
+                    android:scaleType="fitXY" />
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -41,70 +64,6 @@
                     android:textSize="24sp"
                     android:textStyle="bold" />
             </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/imageContainer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="5dp"
-                android:elevation="6dp"
-                app:cardBackgroundColor="@color/colorAccentLight"
-                app:cardCornerRadius="15dp">
-
-                <ImageView
-                    android:id="@+id/imageContent"
-                    android:layout_width="match_parent"
-                    android:layout_height="190dp"
-                    android:layout_gravity="center"
-                    android:background="@color/blueDark"
-                    android:scaleType="fitXY" />
-            </androidx.cardview.widget.CardView>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp">
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="5dp"
-                    android:layout_weight="1"
-                    android:elevation="6dp"
-                    app:cardBackgroundColor="@color/colorAccentLight"
-                    app:cardCornerRadius="15dp">
-
-                    <TextView
-                        android:id="@+id/visitsCounter"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_margin="7dp"
-                        android:text="@string/visits_counter"
-                        android:textColor="@android:color/black"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
-                </androidx.cardview.widget.CardView>
-
-                <Button
-                    android:id="@+id/downloadButton"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="10dp"
-                    android:layout_weight="1"
-                    android:backgroundTint="@color/blue"
-                    android:text="@string/content_server_1"
-                    android:textColor="@android:color/white" />
-            </LinearLayout>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
@@ -136,7 +95,7 @@
                 android:id="@+id/chipContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
+                android:layout_gravity="start"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:elevation="6dp"
@@ -148,6 +107,17 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/visitsCounter"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="7dp"
+                        android:text="@string/visits_counter"
+                        android:textColor="@android:color/black"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -170,13 +140,22 @@
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
+            <Button
+                android:id="@+id/downloadButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:backgroundTint="@color/blue"
+                android:text="@string/content_server_1"
+                android:textColor="@android:color/white" />
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/contentContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="5dp"
                 android:elevation="6dp"
@@ -206,7 +185,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
-                        android:orientation="vertical"></LinearLayout>
+                        android:orientation="vertical" />
 
                     <androidx.cardview.widget.CardView
                         android:id="@+id/otherLinksContainer"
@@ -247,6 +226,7 @@
 
                                 <Button
                                     android:id="@+id/secondDownloadButton"
+                                    style="?android:attr/buttonBarButtonStyle"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center"
@@ -259,6 +239,7 @@
 
                                 <Button
                                     android:id="@+id/thirdDownloadButton"
+                                    style="?android:attr/buttonBarButtonStyle"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center"
@@ -271,6 +252,7 @@
 
                                 <Button
                                     android:id="@+id/fourthDownloadButton"
+                                    style="?android:attr/buttonBarButtonStyle"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center"
@@ -281,7 +263,6 @@
                                     android:text="@string/content_server_4"
                                     android:textColor="@android:color/white" />
                             </LinearLayout>
-
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
                 </LinearLayout>
