--- a/app/src/main/res/layout/item_article_big.xml
+++ b/app/src/main/res/layout/item_article_big.xml
@@ -27,9 +27,9 @@
             <ImageView
                 android:id="@+id/itemArticleImage"
                 android:layout_width="match_parent"
-                android:layout_height="190dp"
+                android:layout_height="120dp"
                 android:layout_gravity="center"
-                android:scaleType="fitXY" />
+                android:scaleType="centerCrop"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
