--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:background="@drawable/search_bar"
+            android:background="@drawable/rectangle_shape"
             app:defaultQueryHint="@string/search_hint"
             app:iconifiedByDefault="false" />
 
